<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">流放者柯南管理器</string>
    <string name="login_title">RCON客户端</string>
    <string name="login_subtitle">流放者柯南服务器管理工具</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="server_address">服务器地址</string>
    <string name="rcon_password">RCON密码</string>
    <string name="rcon_port">RCON端口</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="send_command">发送命令</string>
    <string name="command_input_hint">输入RCON命令...</string>
    <string name="auto_command">自动命令</string>
    <string name="player_manage">玩家管理</string>
    <string name="shop">游戏商城</string>
    <string name="more">更多</string>
    <string name="logout">退出登录</string>
    <string name="clear_console">清空</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="connecting">正在连接...</string>
    <string name="save_info">保存信息</string>
    <string name="no_public_mode">无公网模式</string>
    <string name="quick_commands">快捷命令</string>
    <string name="edit_categories">编辑分类</string>
    <string name="edit_commands">编辑命令</string>
    <string name="category_filter">分类筛选</string>
    <string name="all_commands">全部命令</string>
    <string name="search">搜索</string>
    <string name="search_player">搜索玩家...</string>
    <string name="search_product">搜索商品...</string>
    <string name="players">在线玩家</string>
    <string name="player_info">玩家信息</string>
    <string name="player_inventory">背包物品</string>
    <string name="player_thralls">奴隶信息</string>
    <string name="gold">金额</string>
    <string name="level">等级</string>
    <string name="tag">权限标签</string>
    <string name="online_time">在线时间</string>
    <string name="products">商品列表</string>
    <string name="product_categories">商品分类</string>
    <string name="buy">购买</string>
    <string name="price">价格</string>
    <string name="product_detail">商品详情</string>
    <string name="query_gold">查询金额</string>
    <string name="admin_manage">商城管理</string>
    <string name="add_category">添加分类</string>
    <string name="add_product">添加商品</string>
    <string name="category_name">分类名称</string>
    <string name="product_name">商品名称</string>
    <string name="product_desc">商品描述</string>
    <string name="sort_order">排序序号</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="loading">加载中...</string>
    <string name="no_data">暂无数据</string>
    <string name="error">错误</string>
    <string name="success">成功</string>
    <string name="network_error">网络请求失败</string>
    <string name="server_error">服务器错误</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_failed">连接失败</string>
    <string name="command_sent">命令已发送</string>
    <string name="command_failed">命令发送失败</string>
</resources>
